--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "dev": "nodemon",
     "build": "tsc",
-    "start": "NODE_ENV=production node dist/server.js"
+    "start": "NODE_ENV=production node dist/server.js",
+    "prettier": "prettier --check \"**/*.{js,ts,md}\"",
+    "prettier:fix": "prettier --write \"**/*.{js,ts,md}\""
   },
   "dependencies": {
     "dotenv": "^16.3.1",
@@ -19,6 +21,7 @@
     "@swc/wasm": "^1.3.66",
     "@types/express": "~4.17.17",
     "nodemon": "^2.0.22",
+    "prettier": "^3.0.0",
     "ts-node": "~10.9.1",
     "typescript": "~5.1.6"
   }
